--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
 
 <body>
     
-    <h1>Web 2 Starter</h1>
-
+    <h1>Web 2 Starter</h1>   
+    <div class="iframe">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/CzL5n-GFZc0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
     <!-- jQuery Library via CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- Plugins(s) -->
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fitvids/1.2.0/jquery.fitvids.min.js"></script>
     <!-- My Scripts -->
     <script src="js/scripts.js"></script>
 </body>
